fix thumbnails to load square sizes for all on mobile

--- a/app/styles/helpers/_breakpoints.scss
+++ b/app/styles/helpers/_breakpoints.scss
@@ -9,3 +9,5 @@ $bp-landing-small: new-breakpoint(min-width 400px max-width 754px);
 $bp-landing-tiny: new-breakpoint(min-width 399px);
 
 $bp-shale-ad: new-breakpoint(min-width 870px);
+
+$bp-thumbnails: new-breakpoint(min-width 500px);
